diesel_compile_tests/tests/fail/derive_deprecated/deprecated_column_name.stderr
warning: #[column_name] attribute form is deprecated
  = help: use `#[diesel(column_name = name)]` instead

warning: #[column_name] attribute form is deprecated
  = help: use `#[diesel(column_name = name)]` instead

error: unexpected end of input, expected `=`
       help: the correct format looks like `#[diesel(column_name = foo)]`
  --> tests/fail/derive_deprecated/deprecated_column_name.rs:28:7
   |
LL |     #[column_name]
   |       ^^^^^^^^^^^

error: expected `=`
  --> tests/fail/derive_deprecated/deprecated_column_name.rs:36:18
   |
LL |     #[column_name()]
   |                  ^^

error: expected string literal
  --> tests/fail/derive_deprecated/deprecated_column_name.rs:44:21
   |
LL |     #[column_name = 1]
   |                     ^

warning: #[column_name] attribute form is deprecated
  = help: use `#[diesel(column_name = 1)]` instead

error: expected string literal
  --> tests/fail/derive_deprecated/deprecated_column_name.rs:52:21
   |
LL |     #[column_name = "1"]
   |                     ^^^

error[E0412]: cannot find type `name` in module `users`
  --> tests/fail/derive_deprecated/deprecated_column_name.rs:13:21
   |
LL |     #[column_name = "name"]
   |                     ^^^^^^ not found in `users`

error[E0425]: cannot find value `name` in module `users`
  --> tests/fail/derive_deprecated/deprecated_column_name.rs:13:21
   |
LL |     #[column_name = "name"]
   |                     ^^^^^^ not found in `users`

error[E0412]: cannot find type `name` in module `users`
  --> tests/fail/derive_deprecated/deprecated_column_name.rs:21:34
   |
LL | struct UserTuple(#[column_name = "name"] String);
   |                                  ^^^^^^ not found in `users`

error[E0425]: cannot find value `name` in module `users`
  --> tests/fail/derive_deprecated/deprecated_column_name.rs:21:34
   |
LL | struct UserTuple(#[column_name = "name"] String);
   |                                  ^^^^^^ not found in `users`
